--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "homepage": "https://tatkagore.github.io/WeatherApp",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.57.0",
+    "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "react": "^18.3.1",
